Fix out-of-sync poses for WebVR

Change 47b83657bce5ae767adf0538e4163a8e67159d0d [formerly 7332d07490f42ab4fa9ee1a958d9b4e07531b025] "[vr] Add controller
tooltips" changed the OnVSync controller handling to overwrite
render_info_primary_.head_pose, and if this happened in between
DrawFrame and DrawIntoAcquiredFrame it would submit with a wrong
pose, leading to jerky head tracking.

The fix is to always use the saved WebVR pose and ignore the
render_info_primary_.head_pose member.

BUG=808147

Change-Id: I1c9b3e9c9e7dad6c9dff2837ae00d46a6fecb915
Reviewed-on: https://chromium-review.googlesource.com/903542
Reviewed-by: Ian Vollick <vollick@chromium.org>
Commit-Queue: Klaus Weidner <klausw@chromium.org>
Cr-Commit-Position: refs/heads/master@{#534609}
Former-commit-id: ef56830b31d5b6be1379b956cf4aad9bfa67a1f5